@@ -23,6 +23,7 @@ version 0.7.4 - Currently available as svn snapshot
   - NEW: add instruction for using intel c++ compiler, which usually improve
    performance by 20% to 30%.		
   - BUG: recombinator set sex in a wrong way.
+  - NEW: experimental large pedigree sampling in simuUtil.py
 
 
 version 0.7.3 - (Rev 470) Oct 2, 2006
